@@ -30,6 +30,7 @@ import org.apache.hadoop.io.Text;
 import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.io.WritableUtils;
 import org.apache.hadoop.mapred.TIPStatus;
+import org.apache.hadoop.mapred.TaskID;
 import org.apache.hadoop.util.StringInterner;
 
 /** A report on the state of a task. */
@@ -76,9 +77,16 @@ public class TaskReport implements Writable {
     this.finishTime = finishTime;
     this.counters = counters;
   }
-    
-  /** The id of the task. */
-  public TaskID getTaskId() { return taskid; }
+
+  /** The string of the task ID. */
+  public String getTaskId() {
+    return taskid.toString();
+  }
+
+  /** The ID of the task. */
+  public TaskID getTaskID() {
+    return taskid;
+  }
 
   /** The amount completed, between zero and one. */
   public float getProgress() { return progress; }
@@ -171,7 +179,7 @@ public class TaskReport implements Writable {
              && this.progress == report.getProgress()
              && this.startTime == report.getStartTime()
              && this.state.equals(report.getState())
-             && this.taskid.equals(report.getTaskId());
+             && this.taskid.equals(report.getTaskID());
     }
     return false; 
   }
